<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/showProfileFragment"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/timeSlotListFragment"
            android:title="@string/menu_advertisements" />

        <item
            android:id="@+id/serviceItemListFragment"
            android:title= "@string/menu_services" />

        <item
            android:id="@+id/userFavouriteFragment"
            android:title="@string/menu_favourites" />

        <item
            android:id="@+id/userPendingFragment"
            android:title="@string/menu_pending" />

        <item
            android:id="@+id/chatListFragment"
            android:title="@string/menu_chats" />

    </group>
</menu>