<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ChatFragment">

    <LinearLayout
        android:id="@+id/detailsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/offerTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:padding="5dp"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/text_offer_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="5dp"
            android:text="@string/pending"
            app:layout_constraintTop_toBottomOf="@+id/decision_buttons"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/userTV"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/user"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/chatView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsLayout">

        <Button
            android:id="@+id/button_accept"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/accept"
            android:textSize="10dp" />

        <Button
            android:id="@+id/button_reject"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:textSize="10dp"
            android:text="@string/reject" />
    </LinearLayout>

    <View
        android:id="@+id/splitViewTop"
        android:layout_width="match_parent"
        android:layout_height="1px"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2"
        app:layout_constraintBottom_toTopOf="@+id/chatView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/light_grey"></View>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/splitView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splitViewTop"
        app:layout_constraintVertical_bias="0.0"
        app:stackFromEnd="true"
        tools:itemCount="2"
        tools:listitem="@layout/adapter_message_one" />

    <View
        android:id="@+id/splitView"
        android:layout_width="match_parent"
        android:layout_height="1px"
        app:layout_constraintTop_toBottomOf="@id/chatView"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/light_grey"></View>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splitView"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/editMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter your message"
            android:inputType="textPersonName"
            android:textColor="@color/grey"
            android:textColorHint="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnSend"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_send"
            android:backgroundTint="@color/blue_200"
            android:scaleType="centerCrop"
            app:tint="@color/white" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>