<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">

    <ScrollView android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="10dp"
                android:background="@color/blue_200"
                android:layout_weight="1">

                <androidx.cardview.widget.CardView
                    android:layout_width="92dp"
                    android:layout_height="92dp"
                    android:id="@+id/cardView"
                    app:cardCornerRadius="60pt"
                    android:innerRadius="10dp"
                    android:shape="ring"
                    android:thicknessRatio="1.9">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2.5">

                        <ImageView
                            android:id="@+id/avatarImageView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="1280px"
                            android:minHeight="1706px"
                            android:scaleType="centerCrop"
                            android:layout_gravity="center"
                            android:padding="5px"
                            android:src="@drawable/avatar"/>

                        <ProgressBar
                            android:id="@+id/loadingSpinner"
                            style="?android:attr/progressBarStyleLarge"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:padding="100dp" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/nicknameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tizio"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:paddingTop="10dp"/>

                <TextView
                    android:id="@+id/fullnameTextView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="John Dow"
                    android:textColor="@color/light_grey" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/ratingBarStyleSmall"
                    android:numStars="5"
                    android:layout_gravity="center"
                    android:stepSize="0.1"
                    android:progressBackgroundTint="@color/white"
                    android:progressTint="@color/dusk_yellow"
                    android:isIndicator="true"
                    android:paddingTop="10dp"/>

                <TextView
                    android:id="@+id/ratingTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5px"
                    android:paddingBottom="5dp"
                    android:text="3.5 stars"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="2dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="20dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="70px"
                            android:layout_marginTop="10dp"
                            android:weightSum="1"
                            android:layout_marginBottom="10dp"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".8"
                                android:textSize="20dp"
                                android:textStyle="bold"
                                android:text="@string/description_label"></TextView>
                            <ImageView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".2"
                                android:src="@android:drawable/ic_menu_info_details"></ImageView>
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:layout_marginTop="10px"
                            android:layout_marginBottom="10px"
                            android:background="@color/light_grey"></View>

                        <TextView
                            android:id="@+id/descriptionTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:text="asd"  />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="2dp"
                    app:cardCornerRadius="20dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="70px"
                            android:layout_marginTop="10dp"
                            android:weightSum="1"
                            android:layout_marginBottom="10dp"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".8"
                                android:textSize="20dp"
                                android:textStyle="bold"
                                android:text="@string/accountinfo_label"></TextView>
                            <ImageView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".2"
                                android:padding="4dp"
                                app:tint="@color/grey"
                                android:src="@drawable/useravatar"></ImageView>
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:layout_marginTop="10px"
                            android:layout_marginBottom="10px"
                            android:background="@color/light_grey"></View>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="10dp"
                            android:paddingBottom="10dp">

                            <TextView
                                android:id="@+id/emailTextView1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Email: "
                                android:paddingRight="5pt"
                                android:textStyle="bold"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/emailTextView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="email@address"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingBottom="10dp">

                            <TextView
                                android:id="@+id/locationTextView1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Location:"
                                android:paddingRight="5pt"
                                android:textStyle="bold"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/locationTextView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="location"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingBottom="10dp">

                            <TextView
                                android:id="@+id/time_credit_text_view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/time_credits_label"
                                android:paddingRight="5pt"
                                android:textStyle="bold"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/time_credit_value_text_view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="03:40"/>

                        </LinearLayout>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="2dp"
                    app:cardCornerRadius="20dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="70px"
                            android:layout_marginTop="10dp"
                            android:weightSum="1"
                            android:layout_marginBottom="10dp"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".8"
                                android:textSize="20dp"
                                android:textStyle="bold"
                                android:text="@string/skills_label"></TextView>
                            <ImageView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".2"
                                android:src="@drawable/skills"></ImageView>
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:layout_marginTop="10px"
                            android:layout_marginBottom="10px"
                            android:background="@color/light_grey"></View>

                        <GridView
                            android:id="@+id/skillsGridView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:nestedScrollingEnabled="false"
                            android:horizontalSpacing="6dp"
                            android:gravity="center"
                            tools:listitem="@layout/skill_item"
                            android:numColumns="2"
                            android:verticalSpacing="6dp" />

                        <TextView
                            android:id="@+id/emptyTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="No skills have been added yet!" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/reviewsCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="2dp"
                    app:cardCornerRadius="20dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="70px"
                            android:layout_marginTop="10dp"
                            android:weightSum="1"
                            android:layout_marginBottom="10dp"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".8"
                                android:textSize="20dp"
                                android:textStyle="bold"
                                android:text="@string/reviews_label"></TextView>
                            <ImageView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".2"
                                android:padding="3dp"
                                android:src="@drawable/testimonial"></ImageView>
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:layout_marginTop="10px"
                            android:layout_marginBottom="10px"
                            android:background="@color/light_grey"></View>

                        <GridView
                            android:id="@+id/reviewsGridView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:nestedScrollingEnabled="false"
                            android:horizontalSpacing="6dp"
                            android:gravity="center"
                            tools:listitem="@layout/review_item"
                            android:verticalSpacing="6dp" />

                        <TextView
                            android:id="@+id/emptyrTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="No reviews have been added yet!" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
         </LinearLayout>
    </ScrollView>
</LinearLayout>